dynamizing the shopping cart

--- a/index.html
+++ b/index.html
@@ -115,37 +115,13 @@
             <p class="title">My order</p>
         </div>
         <div class="my-order-content">
-            <div class="shopping-cart">
-              <figure>
-                <img src="https://images.pexels.com/photos/1720957/pexels-photo-1720957.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="bike">
-              </figure>
-              <p>Toy</p>
-              <p>$30,00</p>
-              <img src="./icons/icon_close.png" alt="close">
-            </div>
-
-            <div class="shopping-cart">
-                <figure>
-                  <img src="https://images.pexels.com/photos/1720957/pexels-photo-1720957.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="bike">
-                </figure>
-                <p>Toy</p>
-                <p>$30,00</p>
-                <img src="./icons/icon_close.png" alt="close">
-            </div>
-
-            <div class="shopping-cart">
-                <figure>
-                  <img src="https://images.pexels.com/photos/1720957/pexels-photo-1720957.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="bike">
-                </figure>
-                <p>Toy</p>
-                <p>$30,00</p>
-                <img src="./icons/icon_close.png" alt="close">
+            <div class="products-container">
             </div>
             <div class="order">
                 <p>
                   <span>Total</span>
                 </p>
-                <p>$560.00</p>
+                <p id="precioTotal">$0</p>
             </div>  
             <button class="primary-button add-to-cart-button">
                 Checkout
