Adding remove product

--- a/index.html
+++ b/index.html
@@ -133,20 +133,22 @@
         <div class="product-detail-close">
             <img src="./icons/icon_close.png" alt="close">
         </div>
-        <img id="productDetailImage" src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="bike">
+        <img id="productDetailImage" src="" alt="bike">
         <div class="dots">
             <span class="dot"></span>
             <span class="dot"></span>
             <span class="dot"></span>
         </div>
         <div class="product-info">
-            <p id="productDetailPrice">$35,00</p>
-            <p id="productDetailName">Bike</p>
+            <p id="productDetailPrice"></p>
+            <p id="productDetailName"></p>
             <p>With its practical position, this bike also fulfills a decorative function, add your hall or workspace.</p>
-            <button class="primary-button add-to-cart-button">
-                <img src="./icons/bt_add_to_cart.svg" alt="add to cart">
-                Add to cart
-            </button>
+            <div class="addToCartFromDetail">
+                <button class="primary-button add-to-cart-button">
+                    <img src="./icons/bt_add_to_cart.svg" alt="add to cart">
+                    Add to cart
+                </button>
+            </div>
         </div>
     </aside>
 
