--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <li class="navbar-email">platzi@example.com</li>
                 <li class="navbar-shopping-cart">
                     <img src="./icons/icon_shopping_cart.svg" alt="shopping-cart">
-                    <div>2</div>
+                    <div id="cartContent">+</div>
                 </li>
             </ul>
         </div>
