Adding products and dark background

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             </ul>
         </div>
     </nav>
-    
+
     <aside id="shoppingCartContainer" class="inactive">
         <div class="title-container">
             <img src="./icons/flechita.svg" alt="arrow">
@@ -151,6 +151,9 @@
             </div>
         </div>
     </aside>
+
+    <div class="darkBackground inactive">
+    </div>
 
     <section class="main-container">
         <div class="cards-container">
